--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
